tests/paczka1/fuzzy1/66247617.err
Error in line 12: i9qL7E62v A87 287,52
Error in line 17: A87 A283 52,78
Error in line 6: DnZu A588 100,0
Error in line 22: 0QZC A87 18,19
Error in line 2: 0TxiJ2Ic1 A87 62,5
Error in line 33: SCnlQYxPI9 A588 8,7
Error in line 30: 0TxiJ2Ic1 A283 48,6
Error in line 38: 0QZC A2l3 46,5
